<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blueDark"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/picture1"
                android:contentDescription="@string/my_picture"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nkwor_jane_chinelo"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_developer"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            app:cardBackgroundColor="@color/endBlue" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_m_warmed_of_mobile_technology"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:textColor="#fff"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ideads_maker_curious_and_nature_lover"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:textColor="#fff"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:layout_marginTop="5dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="4"
   >
<LinearLayout
    android:paddingLeft="10dp"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
        <ImageView
            android:id="@+id/clickIcon"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_android_black_24dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
             />
    <ImageView
        android:id="@+id/clickIcon"
        android:paddingTop="10dp"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_apps_black_24dp"
        android:contentDescription="Apps" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apps"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        />
    <ImageView
        android:id="@+id/clickIcon"
        android:paddingTop="10dp"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_cloud_circle_black_24dp"
        android:contentDescription="cloud" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cloudinary"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        />
    <ImageView
        android:id="@+id/clickIcon"
        android:paddingTop="10dp"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_email_black_24dp"
        android:contentDescription="email" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        />

    </LinearLayout>
    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/clickIcon"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_android_black_24dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_apps_black_24dp"
            android:contentDescription="Apps" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apps"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_cloud_circle_black_24dp"
            android:contentDescription="cloud" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cloudinary"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_email_black_24dp"
            android:contentDescription="email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/clickIcon"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_android_black_24dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_apps_black_24dp"
            android:contentDescription="Apps" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apps"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_cloud_circle_black_24dp"
            android:contentDescription="cloud" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cloudinary"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_email_black_24dp"
            android:contentDescription="email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/clickIcon"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_android_black_24dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_apps_black_24dp"
            android:contentDescription="Apps" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apps"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_cloud_circle_black_24dp"
            android:contentDescription="cloud" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cloudinary"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/clickIcon"
            android:paddingTop="10dp"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_email_black_24dp"
            android:contentDescription="email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

    </LinearLayout>
</LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>